Fixing horizontal overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,6 +10,8 @@
 
 html, body {
     height: 100%;
+    max-width: 100vw; 
+    overflow-x: hidden;
     font-family: 'Roboto Mono', monospace;
     background-color: #fff;
     color: #000;
@@ -518,7 +520,7 @@ header {
         top: 80px;
         left: 0;
         transform: translateX(100%);
-        transition: transform 0.4s ease;
+        transition: transform 0.4s ease; 
     }
 
     .nav__list {
